adult/logs/create_fluctuations_15091918_604.out
SLURM_JOBID:  15092525
SLURM_ARRAY_TASK_ID:  604
SLURM_ARRAY_JOB_ID:  15091918
  File "./baseline/adv_ratio.py", line 97
    if i % 20 == 0:
    ^
IndentationError: unexpected indent
('baseline', 5, 0.0005, 160)


